SUBDIRS = arpwatch base debian fonts mrtg ntop oinkmaster spade
contribdir = $(datadir)/ossim/contrib
contrib_DATA = acid_update_db.php \
	directive_xslt.php \
	ntop.conf.sample \
	pads-debian-build.tgz \
	phpGACL-debian-build.tgz \
	rrdtool-ossim.patch \
	snort-2.1-ossim.patch \
	snort.conf.sample \
	tcptrack-dgil.patch \
	tcptrack-ossim.patch

EXTRA_DIST= $(contrib_DATA)
