SUBDIRS = plugins
dbdir   = $(datadir)/ossim/db
db_DATA =  096-to-097.sql \
		   097-to-098.sql \
		   OS_plugin_reference_single.sql \
		   098-to-099.sql \
		   os_services.sql \
		   service_tables.sql.bz2 \
		   create_mysql.sql \
		   ossim_config.sql \
		   snort_nessus.sql \
		   snort_osvdb.sql \
		   create_pgsql.sql \
		   ossim_data.sql

EXTRA_DIST   = $(db_DATA)

DISTCLEANFILES = Makefile.in
