SUBDIRS = plugins
dbdir   = $(datadir)/ossim/db
db_DATA =  OS_plugin_reference_single.sql \
		   os_services.sql \
		   service_tables.sql.bz2 \
		   create_mysql.sql \
		   ossim_config.sql \
		   snort_nessus.sql \
		   snort_osvdb.sql \
		   ossim_data.sql

EXTRA_DIST   = $(db_DATA)

DISTCLEANFILES = Makefile.in
