scriptsdir   = $(datadir)/ossim/scripts
scripts_SCRIPTS = rrd_plugin.pl \
    chkconfig.pl \
	create_sidmap.pl \
	do_nessus.pl \
	draw_graph.pl \
	draw_graph_combined.pl \
	draw_graph_fournier.pl \
	get_date.pl \
	get_rrd_value.pl \
	netbios.pl \
	services.pl \
	update_nessus_ids.pl \
	acid_cache.pl \
	test-directive.pl \
	restoredb.pl
