SUBDIRS = correlation \
		  extract_nessus \
		  extract_osvdb

scriptsdir   = $(datadir)/ossim/scripts
scripts_SCRIPTS = acid_cache.pl \
				  chkconfig.pl \
				  create_sidmap.pl \
				  do_nessus.pl \
				  draw_graph_combined.pl \
				  draw_graph_fournier.pl \
	              draw_graph.pl \
			      get_date.pl \
				  get_osvdb.pl \
				  get_rrd_value.pl \
			      manage_i18n.sh \
				  netbios.pl \
				  restoredb.pl \
				  rrd_plugin.pl \
	              services.pl \
				  test-directive.pl \
				  update_nessus_ids.pl \
				  check_makefile.sh

DISTCLEANFILES = Makefile.in


