ossim_pyossimdir      = $(datadir)/ossim/agent/pyossim
ossim_pyossim_DATA    =  Agent.py \
		MonitorNtopSession.py \
		ParserCA.py \
		ParserIIS.py \
		ParserP0f.py \
		ParserRRD.py \
		Scheduler.py \
		Config.py \
		MonitorOpennms.py \
		ParserCiscoIDS.py \
		ParserIptables.py \
		ParserPads.py \
		ParserSkel.py \
		Server.py \
		MonitorCA.py \
		Monitor.py \
		ParserCiscoPIX.py \
		ParserNetgear.py \
		ParserPostfix.py \
		ParserSnareWindows.py \
		setup.py \
		__init__.py \
		MonitorList.py \
		MonitorTcptrack.py \
		ParserCisco.py \
		ParserNetscreen.py \
		ParserPrelude.py \
		ParserSnort.py \
		util.py \
		main.py \
		MonitorNtopHostinfo.py \
  		ParserApache.py \
		ParserFortiGate.py \
		ParserNTsyslog.py \
		Parser.py \
		ParserSyslog.py \
		Watchdog.py \
		MonitorNtop.py \
		ParserArpwatch.py \
		ParserFW1.py \
		ParserOsiris.py \
		ParserRealSecure.py \
		ParserJuniperFW.py \
		ParserHeartbeat.py \
		ParserNagios.py \
		Plugin.py


EXTRA_DIST   = $(ossim_pyossim_DATA)
DISTCLEANFILES = Makefile.in
