patchesdir = $(datadir)/ossim/contrib/patches
patches_DATA = 05_more_net_perms_by_user.patch \
	05_average_service_level_day.patch \
	05_parser_ntsyslog_regexp_fix.patch \
	05_server_connect_framework.patch \
	08_policy_manage_actions.patch \
	10_running_multiple_instances.patch
EXTRA_DIST = $(patches_DATA)
