pluginsdbdir   = $(datadir)/ossim/db/plugins
pluginsdb_DATA =  apache.sql \
				  netgear.sql \
				  pam_unix.sql \
				  arpwatch.sql \
				  netscreen-firewall.sql \
				  postfix.sql \
				  cisco-ids.sql \
				  netscreen-manager.sql \
				  README \
				  cisco-router.sql \
				  nmap-monitor.sql \
				  realsecure.sql \
				  ntop-monitor.sql \
				  rrd.sql \
				  heartbeat.sql \
				  ntsyslog.sql \
				  snort.sql \
				  iis.sql \
				  opennms-monitor.sql \
				  spamassassin.sql \
				  iptables.sql \
				  ossim-monitor.sql \
				  ssh.sql \
				  p0f.sql \
				  sudo.sql \
				  nagios.sql \
				  pads.sql \
				  tcptrack-monitor.sql


EXTRA_DIST   = $(pluginsdb_DATA)
