serverdir = $(sysconfdir)/ossim/server
server_DATA = categories.xml \
              config.xml \
              directives.dtd \
              directives.xml \
              generic.xml \
              trojans.xml \
	      groups.xml \
              attacks.xml \
	      worms.xml \
	      misc.xml 

EXTRA_DIST   = $(server_DATA)

DISTCLEANFILES = Makefile.in
