classesdir   = $(datadir)/ossim/php/classes
classes_DATA = Alert.inc \
	Backlog.inc \
	Category.inc \
	Classification.inc \
	Conf.inc \
	Control_panel_host.inc \
	Control_panel_net.inc \
	Host.inc \
	Host_mac.inc \
	Host_netbios.inc \
	Host_os.inc \
	Host_position.inc \
	Host_qualification.inc \
	Host_sensor_reference.inc \
	Host_services.inc \
	Host_vulnerability.inc \
	Link.inc \
	Net_host_reference.inc \
	Net_sensor_reference.inc \
	Net.inc \
	Net_qualification.inc \
	Net_vulnerability.inc \
	Plugin.inc \
	Plugin_sid.inc \
	Policy_host_reference.inc \
	Policy.inc \
	Policy_net_reference.inc \
	Policy_port_reference.inc \
	Policy_ports_reference.inc \
	Policy_sensor_reference.inc \
	Policy_sig_reference.inc \
	Policy_time.inc \
	Port_group.inc \
	Port_group_reference.inc \
	Port.inc \
	Protocol.inc \
	RRD_anomaly_global.inc \
	RRD_anomaly.inc \
	RRD_conf_global.inc \
	RRD_conf.inc \
	RRD_data.inc \
	Scan.inc \
	Sensor.inc \
	Signature_group.inc \
	Signature_group_reference.inc \
	Signature.inc

EXTRA_DIST   = $(classes_DATA)
