classesdir   = $(datadir)/ossim/include/classes
classes_DATA = About.inc \
    Alarm.inc \
	Alert.inc \
	Backlog.inc \
	Backlog_alert.inc \
	Category.inc \
	CIDR.inc \
	Classification.inc \
	Config.inc \
	Control_panel_host.inc \
	Control_panel_net.inc \
	Host.inc \
	Host_mac.inc \
	Host_netbios.inc \
	Host_os.inc \
	Host_position.inc \
	Host_qualification.inc \
	Host_scan.inc \
	Host_sensor_reference.inc \
	Host_services.inc \
	Host_vulnerability.inc \
	Incident.inc \
	Incident_alarm.inc \
	Incident_metric.inc \
	Incident_ticket.inc \
	Incident_file.inc \
	Link.inc \
	Locale.inc \
	Net_group.inc \
	Net_group_reference.inc \
	Net_group_scan.inc \
	Net_sensor_reference.inc \
	Net.inc \
	Net_qualification.inc \
	Net_scan.inc \
	Net_vulnerability.inc \
	PDF.inc \
	Plugin.inc \
	Plugin_reference.inc \
	Plugin_sid.inc \
	Policy_host_reference.inc \
	Policy.inc \
	Policy_net_reference.inc \
	Policy_port_reference.inc \
	Policy_ports_reference.inc \
	Policy_sensor_reference.inc \
	Policy_sig_reference.inc \
	Policy_time.inc \
	Port_group.inc \
	Port_group_reference.inc \
	Port.inc \
	Protocol.inc \
	RRD_anomaly_global.inc \
	RRD_anomaly.inc \
	RRD_config.inc \
	Scan.inc \
	SecurityReport.inc \
	Sensor.inc \
	Sensor_interfaces.inc \
	Session.inc \
	Signature_group.inc \
	Signature_group_reference.inc \
	Signature.inc \
	Util.inc

EXTRA_DIST   = $(classes_DATA)
