controlpaneldir = $(localstatedir)/www/ossim/control_panel
controlpanel_DATA = acid_funcs.inc \
	backlog.php \
	handle_anomaly.php \
	handle_os.php \
	mac.php \
	os.php \
	common.inc \
	handle_mac.php \
	global_score.php \
	alarm_console.php \
	anomalies.php \
	show_image.php

EXTRA_DIST   = $(controlpanel_DATA)

