SUBDIRS = os

pixmapsdir = $(localstatedir)/www/ossim/pixmaps
pixmaps_DATA = arrow.gif \
	arrow2.gif \
	gauge-green.jpg \
	gradient1.jpg \
	graph.gif \
	major-green.jpg \
	white_bg.gif \
	delim.jpg \
	gauge-red.jpg \
	gradient2.jpg \
	Hammer2.png \
	major-red.gif \
	solid-blue.jpg \
	gauge-blue.jpg \
	gauge-yellow.jpg \
	grafcuadestat.gif \
	major.gif \
	major-yellow.gif \
	solid-red.jpg \
	riskmeter.png \
	incident.png \
	logo.png \
	logo3.jpg

EXTRA_DIST   = $(pixmaps_DATA)

