pluginsdir = $(sysconfdir)/ossim/agent/plugins
plugins_DATA = apache.xml \
	arpwatch.xml \
	camonitor.xml \
	ca.xml \
	ciscoids.xml \
	ciscopix.xml \
	ciscorouter.xml \
	fw1.xml \
	heartbeat.xml \
	iis.xml \
	iptables.xml \
	nagios.xml \
	nagios2.xml \
	netgear.xml \
	netscreen.xml \
	juniperfw.xml \
	ntop.xml \
	ntsyslog.xml \
	opennms.xml \
	osiris.xml \
	p0f.xml \
	pads.xml \
	prelude.xml \
	realsecure.xml \
	rrd.xml \
	snarewindows.xml \
	snort.xml \
	syslog.xml \
	tcptrack.xml
